--- a/_sass/layout/_navigation.scss
+++ b/_sass/layout/_navigation.scss
@@ -1,7 +1,14 @@
 .site-header {
   @extend .main-container;
-  display: flex;
-  align-items: center;
+  text-align: center;
+
+  @media screen and (min-width: 600px) {
+    padding-top: $base-spacing;
+    padding-bottom: $base-spacing;
+    display: flex;
+    align-items: flex-end;
+    text-align: left;
+  }
 }
 
 .logo {
@@ -12,6 +19,7 @@
 .social-nav {
   display: inline-block;
   font-family: $heading-font-family;
+  padding-bottom: $base-spacing;
 
   li {
     display: inline-block;
