--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -19,9 +19,9 @@
           </li>
         </ul>
         <ul class="main-nav">
-          <li><a href="">About</a></li>
-          <li><a href="">Services</a></li>
-          <li><a href="">Contact</a></li>
+          <!-- <li><a href="">About</a></li>
+          <li><a href="">Services</a></li> -->
+          <li><a href="/contact">Contact</a></li>
         </ul>
       </nav>
     </footer>
