--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,7 @@
     <header class="site-header">
       <h1 class="logo">
       <a href="/">
-        Digital Media Unicorn
+        {% include digitalmediaunicorn-logo.svg %}
       </a>
         </h1>
       <nav>
@@ -39,8 +39,8 @@
           </li>
         </ul>
         <ul class="main-nav">
-          <li><a href="">About</a></li>
-          <li><a href="">Services</a></li>
+          <!-- <li><a href="">About</a></li>
+          <li><a href="">Services</a></li> -->
           <li><a href="/contact" class="contact">Contact</a></li>
         </ul>
       </nav>
