--- a/_sass/layout/_footer.scss
+++ b/_sass/layout/_footer.scss
@@ -1,7 +1,12 @@
 .site-footer {
   @extend .main-container;
-  display: flex;
-  align-items: center;
+  text-align: center;
+
+  @media screen and (min-width: 600px) {
+    display: flex;
+    text-align: left;
+    align-items: center;
+  }
 
   h1 {
     font-size: $base-font-size;
