--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,6 +11,17 @@
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
     <link rel="stylesheet" href="https://use.typekit.net/eqm1yvx.css">
     <link rel="stylesheet" href="{{ site.baseurl }}/stylesheets/application.css">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-111629772-1"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+function gtag() {
+  dataLayer.push(arguments);
+}
+gtag("js", new Date());
+
+gtag("config", "UA-111629772-1");
+</script>
   </head>
 
   <body>
