Services page and testamonials

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -50,8 +50,8 @@ gtag("config", "UA-111629772-1");
           </li>
         </ul>
         <ul class="main-nav">
-          <!-- <li><a href="">About</a></li>
-          <li><a href="">Services</a></li> -->
+          <!-- <li><a href="">About</a></li> -->
+          <li><a href="/services">Services</a></li>
           <li><a href="/contact" class="contact">Contact</a></li>
         </ul>
       </nav>
