--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -19,8 +19,8 @@
           </li>
         </ul>
         <ul class="main-nav">
-          <!-- <li><a href="">About</a></li>
-          <li><a href="">Services</a></li> -->
+          <!-- <li><a href="">About</a></li> -->
+          <li><a href="/services">Services</a></li>
           <li><a href="/contact">Contact</a></li>
         </ul>
       </nav>
