--- a/stylesheets/application.scss
+++ b/stylesheets/application.scss
@@ -2,6 +2,7 @@
 ---
 
 @import "vendor/normalize";
+@import "vendor/gallery";
 @import "bourbon/bourbon";
 
 @import "base/base";
@@ -16,3 +17,4 @@
 @import "layout/story";
 @import "layout/contact-form";
 @import "layout/increase";
+@import "layout/services";
